--- a/frontend/public/style.css
+++ b/frontend/public/style.css
@@ -10,6 +10,10 @@ Version: 1.1
 /*--------------------------------------------------------------
 This is main CSS file that contains custom style rules used in this template
 --------------------------------------------------------------*/
+.navbar-brand .logo {
+    height: 50px;
+    margin-left: 150px;
+}
 
 /* Luxury Booking Form Enhancements */
 .react-datepicker-wrapper {
@@ -278,20 +282,6 @@ a:hover {
 --------------------------------------------------------------*/
 /* - Section Padding
 --------------------------------------------------------------*/
-.padding-small {
-  padding-top: 5em;
-  padding-bottom: 5em;
-}
-
-.padding-medium {
-  padding-top: 8em;
-  padding-bottom: 8em;
-}
-
-.padding-large {
-  padding-top: 8em;
-  padding-bottom: 8em;
-}
 
 .padding-side {
   padding-left: 6rem;
